--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
-body { font-family: sans-serif; padding: 1em; }
-.ais-SearchBox { margin: 1em 0; }
+body { font-family: sans-serif; padding: 1em; background: rgba(219, 219, 236, 0.943)}
+.ais-SearchBox { margin: 0em 0; }
 .ais-Pagination { margin-top: 1em }
-.left-panel { float: left; width: 250px; }
+.left-panel { position: relative; float: left; width: 250px; }
 .right-panel { margin-left: 260px; }
 .ais-InstantSearch { max-width: 960px; overflow: hidden; margin: 0 auto }
 .ais-Hits-item { margin-bottom: 1em; width: calc(50% - 1rem) }
 .ais-Hits-item img { margin-right: 1em }
 .hit-name { margin-bottom: .5em }
-.hit-description { color: #888; font-size: 14px; margin-bottom: .5em }
+.hit-description { color: rgb(0, 0, 0); font-size: 14px; margin-bottom: .5em }
+.resize {
+  width: 300px;
+  height: auto;
+}
+
 
