--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body { font-family: sans-serif; padding: 1em; background: rgba(219, 219, 236, 0.
 .ais-Hits-item img { margin-right: 1em }
 .hit-name { margin-bottom: .5em }
 .hit-description { color: rgb(0, 0, 0); font-size: 14px; margin-bottom: .5em }
-.resize {
+.image {
   width: 300px;
   height: auto;
 }
